@@ -21,11 +21,11 @@ public class JsonReadTest {
                 Assertions.assertEquals("Центральная городская библиотека", book.getName());
                 Assertions.assertEquals("ул. Ленина, 15, г. Москва, Россия", book.getAddress());
                 Assertions.assertEquals("10:00 - 20:00", book.getOpening_hours());
-                Assertions.assertEquals("1984", book.getBooks().getFirst().getTitle());
-                Assertions.assertEquals("Джордж Оруэлл", book.getBooks().getFirst().getAuthor());
-                Assertions.assertEquals(1949, book.getBooks().getFirst().getYear());
-                Assertions.assertEquals("Антиутопия", book.getBooks().getFirst().getGenre());
-                Assertions.assertTrue(book.getBooks().getFirst().isIs_available());
+                Assertions.assertEquals("1984", book.getBooks().get(0).getTitle());
+                Assertions.assertEquals("Джордж Оруэлл", book.getBooks().get(0).getAuthor());
+                Assertions.assertEquals(1949, book.getBooks().get(0).getYear());
+                Assertions.assertEquals("Антиутопия", book.getBooks().get(0).getGenre());
+                Assertions.assertTrue(book.getBooks().get(0).isIs_available());
                 Assertions.assertEquals("Мастер и Маргарита", book.getBooks().get(1).getTitle());
                 Assertions.assertEquals("Михаил Булгаков", book.getBooks().get(1).getAuthor());
                 Assertions.assertEquals(1967, book.getBooks().get(1).getYear());
